
5.1.1 -> 5.1.2:
    - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
    - jbj: fix: use rpmlog instead of rpmError for messages.
    - glen: print error when makeTempPath fails due missing temp dir

5.1.0 -> 5.1.1:
    - jbj: permit firefox debugging by creating an empty dir (#444310).
    - jbj: header: free tag data on error retrurn with damaged data.
    - rpm.org: rpmsw: insure that time has passed while calibrating (#435309).
    - jbj: header: fix: avoid double free with damaged data (#442761).
    - afb: fix VPATH builds finding rpmversion.h (in build)
    - afb: fix parallel build of rpmdigest (automake quirk)
    - jbj: rpmte: revert to individual tags instead of RPMTAG_NVRA.
    - afb: macosx: fix thinko in previous xar linking workaround

5.1b2 -> 5.1.0:
    - jbj: rpmte: fix: snip ".arch" from "-release", same NEVRA check broke.
    - nkukard: support building under Linux/uClibc in addition to Linux/GLIBC
    - jbj: update id.po from Translation Project.
    - rse: merge OpenPKG-specific "extension-based-compression-detection" change
    - afb: disable intl/iconv for popt 1.14 under Mac OS X
    - jbj: update {nl,pl,sl,sv,vi}.po from Translation Project.

5.1b1 -> 5.1b2:
    - rse: use latest POPT 1.14 for building with "devtool standalone"
    - rse: replace obsolete AC_AIX and AC_MINIX checks with newer AC_USE_SYSTEM_EXTENSIONS to get rid of Autoconf warnings
    - rse: upgrade build environment to GNU autoconf 2.62

5.0.0 -> 5.1b1:
    - jbj: update PO files from Translation Project for rpm-5.1 inclusion.
    - jbj: permit installing 3.0.x SRPMS.
    - jbj: rpmio: fix: add rpmluaFiles to loader map.
    - jbj: fix: avoid assertion failure with entry->info.offset == 0.
    - jbj: merge "support-rpmlua-option" patch from OpenPKG.
    - jbj: merge "support-rpmpopt-option" patch from OpenPKG.
    - jbj: merge "security-sanity-check-rpmpopt-and-rpmmacros" patch from OpenPKG.