@@ -1,5 +1,10 @@
 
 5.1.1 -> 5.1.2:
+    - jbj: add a missing newline to a debug message.
+    - jbj: revert rpmtsOpenDB on --checksig path, rely on the lazy open
+    	in rpmtsFindPubkey instead.
+    - jbj: fix: rpm -qp returns NOKEY because rpmdb is not yet open. Do a lazy
+    	open in rpmtsFindPubkey.
     - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
     - jbj: fix: use rpmlog instead of rpmError for messages.
     - glen: print error when makeTempPath fails due missing temp dir
